--- a/css/mobile.css
+++ b/css/mobile.css
@@ -6,10 +6,10 @@
     display: none;
   }
 
-  .container{
+  .container {
     padding: 10px;
   }
-  .spacer{
+  .spacer {
     padding: 30px;
   }
 
@@ -19,7 +19,7 @@
     justify-content: center;
   }
 
-  nav{
+  nav {
     gap: unset;
   }
   .nav-mobile {
@@ -47,12 +47,12 @@
   main h2 {
     font-size: 50px;
   }
-  h2{
+  h2 {
     text-align: center;
     padding: 10px 0;
   }
 
-  .experience .card{
+  .experience .card {
     padding: 10px;
     margin: 20px 10px;
     font-size: 17px;
@@ -60,50 +60,53 @@
   .experience .card a {
     font-size: 22px;
   }
-  .experience .card sup{
+  .experience .card sup {
     font-size: 10px;
     padding: 2px 5px;
   }
 
-  .skills{
+  .skills {
     padding: 10px;
   }
-  .skills .box{
+  .skills .box {
     padding: 10px;
     margin: 5px;
+    justify-content: space-around;
   }
-  .skills-item{
+  .skills-item {
     width: 100px;
     height: 100px;
     font-size: 8px;
     justify-content: end;
     gap: 0;
   }
-  .skills-item img{
+  .skills-item img {
     height: 50px;
     width: 50px;
   }
 
-  
-  .other-skills{
+  .other-skills {
     margin: 10px;
   }
-  .other-skills ul{
+  .other-skills ul {
     width: fit-content;
     font-size: medium;
   }
 
-  .timeline{
+  .timeline {
     font-size: 15px;
   }
 
-  .form-div{
+  .show-certificates {
+    font-size: 10px;
+  }
+  .form-div {
     padding: 0px;
     margin: 0px;
     text-align: center;
   }
 
-  .form-div form button{
+  .form-div form button {
     background-color: var(--shadow-color);
   }
 
@@ -112,15 +115,14 @@
     margin: 40px 10px 0px 10px;
   }
 
-
-  footer h2{
+  footer h2 {
     font-size: 40px;
     margin: 20px;
   }
-  .footer-inner{
+  .footer-inner {
     gap: 20px;
   }
-  .foot-note{
+  .foot-note {
     margin-bottom: 50px;
   }
 }
